--- a/localhorst.xhtml
+++ b/localhorst.xhtml
@@ -20,7 +20,7 @@
     <script src="js/jquery-2.1.3.min.js"></script>
 
     <link href="css/localhorst.css" type="text/css" rel="stylesheet" />
-    <!--<script src="js/localhorst.js" type="text/javascript"></script>-->
+    <script src="js/localhorst.js" type="text/javascript"></script>
 </head>
 <body>
     <h1 id="pageheader">LocalHorst Startpage</h1>
@@ -28,8 +28,8 @@
     <div class="hspace" />
 
     <div class="hbox_container">
-        <form id="google_search" class="search">
-            <input type="search" name="query" />
+        <form id="google_search" class="search" action="javascript:search_google();">
+            <input type="text" placeholder="Google" name="q" autofocus="true" />
             <button type="submit" class="searchbutton"><i class="icon ion-search" /></button>
         </form>
     </div>
