update manifest, add Readme and icons

--- a/localhorst.xhtml
+++ b/localhorst.xhtml
@@ -14,11 +14,9 @@
     <title>\x7f\x00\x00\x01</title>
     <meta charset="UTF-8" />
     <meta name="description" content="LocalHorst Startpage" />
-    <link rel="icon" type="image/png" href="localhorst-ic.png" />
+    <link rel="icon" type="image/png" href="localhorst-32.png" />
     
     <link href="css/ionicons.min.css" type="text/css" rel="stylesheet" />
-    <script src="js/jquery-2.1.3.min.js"></script>
-
     <link href="css/localhorst.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
